components/OS.module.css
.taskbar {
  position: absolute;
  bottom: 0;
  width: 100%;
  border-bottom: 0;
  border-left: 0;
  border-right: 0;
  display: flex;
  flex-direction: row;
  align-items: stretch;
  gap: 4px;
  z-index: 2;
  height: var(--taskbar-height);
}

.startMenu {
  position: absolute;
  left: 0;
  bottom: var(--taskbar-height);
  z-index: 1;
  width: 200px;
  display: flex;
  flex-direction: column;
  animation: startMenuOpenAnimation 120ms ease-out both;

  & button {
    box-shadow: none;
    padding: 16px;
    text-align: left;
  }

  & button:hover {
    background-color: darkblue;
    color: white;
  }
}

.startButton {
  font-weight: bold;
  min-width: inherit;
  transition: transform 50ms ease;
}

.startButton:active {
  transform: scale(0.95);
}

.divider {
  width: 2px;
  background: gray;
  border-left: 1px solid #0a0a0a;
  border-right: 1px solid #fff;
}

.windowButton {
  min-width: inherit;
  transition: transform 50ms ease;
}

.windowButton:active {
  transform: scale(0.95);
}

.active {
  box-shadow: -1px -1px #ffffff, inset 1px 1px #0a0a0a, inset -2px -2px #dfdfdf,
    inset 2px 2px #808080;
  background-color: rgb(248, 248, 248);
  font-weight: bold;
}

@keyframes startMenuOpenAnimation {
  from {
    opacity: 0;
    transform: translateY(8px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@media (max-width: 768px) {
  .taskbar {
    height: 48px;
  }

  .startMenu {
    width: 150px;
  }

  .startButton {
    font-size: 14px;
  }

  .windowButton {
    font-size: 12px;
    min-height: 36px;
  }
}

